todolist: temporary fix for scrollbar

--- a/src/components/Sidebar/sidebar.module.css
+++ b/src/components/Sidebar/sidebar.module.css
@@ -12,7 +12,6 @@
   transition: width 0.3s ease;
   background-color: var(--secondary-color);
   min-height: 100svh;
-  height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
