--- a/src/features/todolist/components/Category/category.module.css
+++ b/src/features/todolist/components/Category/category.module.css
@@ -24,9 +24,12 @@
 }
 
 .categoryBoard {
+  height: 100vh;
   display: flex;
   width: 100%;
+  max-width: 100%;
   gap: 15px;
+  overflow: auto;
 }
 
 @keyframes rotate {
